# paper-assistant

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: email.yaml  filters.yaml  llm.yaml  logging.yaml  scheduler.yaml  settings.yaml
docs/: 00_Codex_Instructions.md  01_Project_Requirements.md  02_System_Architecture.md  03_Development_Guidelines.md  04_Testing_Strategy.md  05_Roadmap.md  06_API_Design.md  07_Project_Structure.md  08_Prompts.md  09_Deployment.md  AGENTS.md
prompts/: hot_topic.md  summary.md  system.md  translation.md
scripts/: build.py  clean.py  release.py  setup.py
src/: main.py
src/analyzer/: __init__.py  keyword.py  llm.py  score.py
src/cache/: __init__.py
src/config/: __init__.py  env.py  loader.py  models.py  validator.py
src/crawler/: __init__.py  arxiv_client.py  models.py  parser.py
src/email/: sender.py  smtp.py
src/filter/: __init__.py  engine.py  rules.py  scoring.py
src/gui/: __init__.py  email_dialog.py  log_viewer.py  main_window.py  report_viewer.py  settings.py
src/inspire/: __init__.py  author.py  cache.py  client.py
src/models/: __init__.py  author.py  common.py  paper.py  report.py  statistics.py
src/report/: __init__.py  html.py  markdown.py  pdf.py  template.py
src/scheduler/: __init__.py  jobs.py  scheduler.py
src/services/: __init__.py  daily_pipeline.py  workflow.py
src/summary/: __init__.py  formatter.py  summarizer.py
src/translator/: __init__.py  prompt.py  translator.py
src/utils/: __init__.py  helpers.py  logger.py  network.py  (+3 more)
tests/: __init__.py
(+7 files in other folders)
